Fixing some ui layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   margin: 0;
   padding: 0;
+  overflow-y: auto;
   position: relative;
   display: flex;
   flex-direction: column;
